--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <div>
             <h1>Sneakers<i class="fas fa-circle"></i></h1>
-            <a href="products.html"></a>
+            <a href="products.html">Productes</a>
         </div>
         <div>
             <i class="fas fa-user"></i>
