--- a/index.html
+++ b/index.html
@@ -14,17 +14,9 @@
 <body>
     
     <header>
-        <div>
-            <h1>Sneakers<i class="fas fa-circle"></i></h1>
-            <a href="products.html">Productes</a>
-        </div>
-        <div>
-            <i class="fas fa-user"></i>
-            <i class="fas fa-shopping-bag"></i>
-            <i class="fas fa-bars"></i>
-        </div>
-        
+        <div class="menu-container"></div>
     </header>
+
 
     <main>
 
@@ -32,24 +24,23 @@
 
 
     <footer>
-        <div>
+        <div> 
             <i class="fas fa-circle"></i>
             <h4>Sneakers on sosial media</h4>
             <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
             <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://www.snapchat.com.com" target="_blank"><i class="fab fa-snapchat-ghost"></i></a>
         </div>
-        <div>
+        <div>  
             <i class="fas fa-circle"></i>
             <h4>Contact information</h4>
             <p>Phone: 99 99 99 99</p>
             <p>Email: sneakers@gmail.com</p>
-        </div>
-        <div>
             <i class="fas fa-circle"></i>
-            <h4>Adress concept store</h4>
         </div>
     </footer>
+
+    <script src="js/index.js" type="module"></script>
 
 </body>
 </html>
