--- a/login.html
+++ b/login.html
@@ -20,21 +20,22 @@
 
     <main>
 
-        <h1>Login</h1>
+        
 
         <form id="form" class="login-form" action="submit.php" method="POST">
-            <div>
+            <h1>Login</h1>
+            <div class="form-content">
                 <input type="text" id="name">
                 <label for="name">Username *</label>         
             </div>
 
-            <div>   
+            <div class="form-content">   
                 <input type="text" id="email">
                 <label for="email">Password *</label>
             </div>
         
 
-            <button>Send message</button>
+            <button>Login</button>
         </form>
 
     </main>
