--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
 
     <main>
 
+        
+        <div class="home-all-sneakers">
+            <hr>
+            <div>
+                <img src="images/products.jpg" alt="girl sitting on a stair, black cloths, sunglasses, looiking in the camera, white shoes">
+            </div>
+            <div>
+                <h2>Alle sneakers</h2>
+                <p>Take a look at our <span>collection</span> of sneakers</p>
+                <button>View</button>
+            </div>
+        </div>
+
+
     </main>
 
 
