--- a/about.html
+++ b/about.html
@@ -12,38 +12,38 @@
     <script src="https://kit.fontawesome.com/3ca04481c9.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
-    <header>
-        <div class="menu-container"></div>
-    </header>
+    <div class="wrapper">
+        <header>
+            <div class="menu-container"></div>
+        </header>
 
 
-    <main>
+        <main>
 
-        <div class="about-container">
-            <div>
-                <img src="images/about.jpg" alt="from the store, a lot of sneakers, each sneaker on seperat orange shelf">
+            <div class="about-container">
+                <div>
+                    <img src="images/about.jpg" alt="from the store, a lot of sneakers, each sneaker on seperat orange shelf">
+                </div>
+                <div class="about-content">
+                    <h1>About</h1>
+                    <ul>
+                        <li><i class="fas fa-circle"></i>About us is an important page.</li>
+                        <li><i class="fas fa-circle"></i>Show your costumers that they can trust you.</li>
+                        <li><i class="fas fa-circle"></i>Be truthful and open.</li>
+                        <li><i class="fas fa-circle"></i>Give an insight into the history of the company.</li>
+                        <li><i class="fas fa-circle"></i>Describe why the company is good at what they do.</li>
+                        <li><i class="fas fa-circle"></i>Describe which customers the company has had, and what you have helped them with.</li>
+                        <li><i class="fas fa-circle"></i>Write feedback you have received from customers.</li>
+                        <li><i class="fas fa-circle"></i>Attach photos of employees and their work areas.</li>
+                        <li><i class="fas fa-circle"></i>Add contact information.</li>
+                    </ul>
+                    <h2>Contact information</h2>
+                    <p>Phone: 99 99 99 99</p>
+                    <p>Email: sneakers@gmail.com</p>
+                </div>
             </div>
-            <div class="about-content">
-                <h1>About</h1>
-                <ul>
-                    <li><i class="fas fa-circle"></i>About us is an important page.</li>
-                    <li><i class="fas fa-circle"></i>Show your costumers that they can trust you.</li>
-                    <li><i class="fas fa-circle"></i>Be truthful and open.</li>
-                    <li><i class="fas fa-circle"></i>Give an insight into the history of the company.</li>
-                    <li><i class="fas fa-circle"></i>Describe why the company is good at what they do.</li>
-                    <li><i class="fas fa-circle"></i>Describe which customers the company has had, and what you have helped them with.</li>
-                    <li><i class="fas fa-circle"></i>Write feedback you have received from customers.</li>
-                    <li><i class="fas fa-circle"></i>Attach photos of employees and their work areas.</li>
-                    <li><i class="fas fa-circle"></i>Add contact information.</li>
-                </ul>
-                <h2>Contact information</h2>
-                <p>Phone: 99 99 99 99</p>
-                <p>Email: sneakers@gmail.com</p>
-            </div>
-        </div>
-    </main>
-
+        </main>
+    </div>
 
     <footer>
         <div> 
