--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
                     <input type="text" id="email">
                     <label for="email">Password *</label>
                 </div>
-                <button>Login</button>
+                <button class="btn login-add">Login</button>
             </form>   
         </main>
     </div>
