--- a/products.html
+++ b/products.html
@@ -17,7 +17,8 @@
         <div class="menu-container"></div>
     </header>
 
-    <main>
+    <main class="main-products">
+        <h1>Shoes</h1>
         <div class="product-container"></div>
     </main>
 
