--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
         <main>
             <a href="products.html" class="home-all-sneakers">
-                <div class="img">
+                <div>
                     <img src="images/products.jpg" alt="girl sitting on a stair, black cloths, sunglasses, looiking in the camera, white shoes">
                 </div>
                 <div class="home-all-sneakers-text">
@@ -32,7 +32,7 @@
                 </div>
             </a>  
             <a href="about.html" class="home-about">
-                <div class="img">
+                <div>
                     <img src="images/about.jpg" alt="girl sitting on a stair, black cloths, sunglasses, looiking in the camera, white shoes">
                 </div>
                 <div class="home-about-text">
