--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="home-all-sneakers-text">
                     <h2>All shoes</h2>
-                    <p>Take a look at the entire <span>collection</span> of sneakers</p>
+                    <p>Take a look at our entire <span>collection</span> of shoes</p>
                     <button>View</button>
                 </div>
             </a>  
