--- a/products.html
+++ b/products.html
@@ -17,7 +17,7 @@
         <div class="menu-container"></div>
     </header>
 
-    <main class="main-products">
+    <main>
         <h1>Shoes</h1>
         <div class="product-container"></div>
     </main>
