--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="home-all-sneakers-text">
                     <h2>All shoes</h2>
                     <p>Take a look at our entire <span>collection</span> of shoes</p>
-                    <button>View</button>
+                    <button class="btn orange">View</button>
                 </div>
             </a>  
             <a href="about.html" class="home-about">
@@ -38,7 +38,7 @@
                 <div class="home-about-text">
                     <h2>About</h2>
                     <p>Our <span>passion</span> for shoes</p>
-                    <button>About</button>
+                    <button class="btn orange">About</button>
                 </div>
             </a> 
         </main>
