--- a/change-product.html
+++ b/change-product.html
@@ -38,7 +38,7 @@
                 </div>
 
                 <button class="btn login-add">Add</button>
-                <button class="btn edit">Edit</button>
+                <button class="btn orange">Edit</button>
                 <button class="btn delete">Delete</button>
             </form>  
         </main>
