--- a/cart.html
+++ b/cart.html
@@ -47,7 +47,7 @@
             </div>  
     </footer>
 
-    <script src="js/index.js" type="module"></script>
+    <script src="js/cart.js" type="module"></script>
 
 </body>
 </html>
