--- a/products.html
+++ b/products.html
@@ -19,6 +19,11 @@
 
     <main>
         <h1>Shoes</h1>
+        <div class="search-container">
+            <p>Search for your favorite shoe</p>
+            <input class="search" placeholder="Search for shoes ...">
+        </div>
+
         <div class="product-container"></div>
     </main>
 
