--- a/products.html
+++ b/products.html
@@ -18,13 +18,16 @@
     </header>
 
     <main>
-        <h1>Shoes</h1>
-        <div class="search-container">
-            <p>Search for your favorite shoe</p>
-            <input class="search" placeholder="Search for shoes ...">
-        </div>
+        <div class="product-page-container">
+            <h1>Shoes</h1>
+            <div>
+                <p>Search for your favorite shoe</p>
+                <input class="search" placeholder="Search for shoes ...">
+            </div>
 
-        <div class="product-container"></div>
+            <div class="product-container"></div>
+        </div>
+        
     </main>
 
 
