--- a/about.html
+++ b/about.html
@@ -62,7 +62,6 @@
         </div>
     </footer>
 
-    <script src="js/index.js" type="module"></script>
-
+    <script src="js/about.js" type="module"></script>
 </body>
 </html>
