--- a/products.html
+++ b/products.html
@@ -22,7 +22,10 @@
             <h1>Shoes</h1>
             <div>
                 <p>Search for your favorite shoe</p>
-                <input class="search" placeholder="Search for shoes ...">
+                <div class="search-container">
+                    <input class="search" id="search" placeholder="Search for shoes ...">
+                </div>
+                
             </div>
 
             <div class="product-container"></div>
