--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     
 
         <main>
+            <div class="hero-banner-container"></div>
             <a href="products.html" class="home-all-sneakers">
                 <div>
                     <img src="images/products.jpg" alt="girl sitting on a stair, black cloths, sunglasses, looiking in the camera, white shoes">
