--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
 
         <main>
             <div class="hero-banner-container"></div>
+
+            <div class="home-featured">
+                <div class="heading">
+                    <h1>Sneakers</h1>
+                    <p>Your favorite sneakers</p>
+                </div>
+                <div class="featured-container">
+                    <h2>Featured products</h2>
+                </div>
+            </div>
+            
+
             <a href="products.html" class="home-all-sneakers">
                 <div>
                     <img src="images/products.jpg" alt="girl sitting on a stair, black cloths, sunglasses, looiking in the camera, white shoes">
