--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             <div class="hero-banner-container"></div>
 
             <div class="home-featured">
-                <div class="heading">
-                    <h1>Sneakers</h1>
-                    <p>Your favorite sneakers</p>
+                <div class="home-featured-heading">
+                    <h1>Your favorite sneakers</h1>
                 </div>
-                <div class="featured-container">
+                <div class="home-featured-products">
                     <h2>Featured products</h2>
+                    <div class="featured-container"></div>
                 </div>
             </div>
             
