--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
         <main>
             <div class="hero-banner-container"></div>
 
-            <div class="home-featured">
-                <div class="home-featured-heading">
-                    <h1>Your favorite sneakers</h1>
-                </div>
-                <div class="home-featured-products">
-                    <h2>Featured products</h2>
-                    <div class="featured-container"></div>
+            <div class="home-featured-container">
+                <div class="home-featured">
+                    <div class="home-featured-heading">
+                        <h1>Your favorite sneakers</h1>
+                    </div>
+                    <div class="home-featured-products">
+                        <h2>Featured products</h2>
+                        <div class="featured-container"></div>
+                    </div>
                 </div>
             </div>
             
