--- a/products.html
+++ b/products.html
@@ -18,16 +18,14 @@
     </header>
 
     <main>
-        <div class="product-page-container">
-            <h1>Shoes</h1>
-            <div>
-                <p>Search for your favorite shoe</p>
+        <div class="product-page-container">         
+            <div class="product-page-text">
+                <h1>Shoes</h1>
+                <p>Search for your favorite shoes</p>
                 <div class="search-container">
                     <input class="search" id="search" placeholder="Search for shoes ...">
                 </div>
-                
             </div>
-
             <div class="product-container"></div>
         </div>
         
