--- a/products.html
+++ b/products.html
@@ -26,7 +26,10 @@
                     <input class="search" id="search" placeholder="Search for shoes ...">
                 </div>
             </div>
-            <div class="product-container"></div>
+            <div class="product-container">
+                <div class="loader"></div>
+            </div>
+            <div class="no-products"></div>
         </div>
         
     </main>
