--- a/login.html
+++ b/login.html
@@ -18,21 +18,26 @@
         <header>
             <div class="menu-container"></div>
         </header>
-
+ 
         
         <main>   
             <form id="form" class="login-form" action="submit.php" method="POST">
                 <h1>Login</h1>
+
+                <div class="message-container"></div>
+
                 <div class="form-content">
-                    <input type="text" id="name">
-                    <label for="name">Username *</label>         
+                    <input type="text" id="username">
+                    <label for="username">Username *</label>         
                 </div>
     
                 <div class="form-content">   
-                    <input type="text" id="email">
-                    <label for="email">Password *</label>
+                    <input type="text" id="password">
+                    <label for="password">Password *</label>
                 </div>
+
                 <button class="btn login-add">Login</button>
+
             </form>   
         </main>
     </div>
@@ -57,7 +62,7 @@
     </footer>
 
 
-    <script src="js/index.js" type="module"></script>
+    <script src="js/login.js" type="module"></script>
 
 </body>
 </html>
