--- a/change-product.html
+++ b/change-product.html
@@ -27,24 +27,23 @@
                 <div class="message-container"></div>
 
                 <div class="form-content">
-                    <input type="text" id="title"/>
                     <label for="title">Product title *</label>
+                    <input type="text" id="title"/>
                     <div class="form-error" id="titleError">Pleace fill out product title, more than 2 characters</div>         
-                </div>
-    
+                </div>  
                 <div class="form-content">   
-                    <input type="number" id="price"/>
                     <label for="price">Product price *</label>
+                    <input type="number" id="price"/>
                     <div class="form-error" id="priceError">Pleace fill out product price, more than 2 numbers</div>
                 </div>
                 <div class="form-content">   
-                    <textarea id="description" name="description"></textarea>
                     <label for="description">Product Description *</label>
+                    <textarea id="description" name="description"></textarea>      
                     <div class="form-error" id="descriptionError">Pleace fill out product description, more than 10 characters</div>
                 </div>
-                <div>
-                    <input type="file" name="image" id="image" accept="image/jpeg">
-                    <!-- <label for="image">Choose a picture</label> -->
+                <div class="form-image-upload-container">
+                    <label for="file">Upload image</label>
+                    <input type="file" class="upload-image" name="image" id="image" accept="image/jpeg">
                 </div>
 
                 <!-- <div class="form-content">
@@ -60,7 +59,7 @@
                     <label for="featured">Featured</label> -->
  
 
-                <button type="submit" id="btn-add">Add</button>
+                <button type="submit" id="btn-add" class="btn login-add">Add</button>
                 <!-- <button class="btn login-add" id="btn-add">Add</button> -->
                 <!-- <button class="btn orange">Edit</button>
                 <button class="btn delete">Delete</button> -->
