--- a/about.html
+++ b/about.html
@@ -19,7 +19,12 @@
 
 
         <main>
-
+            <nav class="where-am-i-container">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html" class="where-am-i-now"><i class="fas fa-chevron-right"></i>About</a></li>
+                </ul>
+            </nav>
             <div class="about-container">
                 <div>
                     <img src="images/about.jpg" alt="from the store, a lot of sneakers, each sneaker on seperat orange shelf">
