--- a/cart.html
+++ b/cart.html
@@ -20,7 +20,13 @@
         </header>
     
     
-        <main>         
+        <main>      
+            <nav class="where-am-i-container">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="cart.html" class="where-am-i-now"><i class="fas fa-chevron-right"></i>Shopping bag</a></li>
+                </ul>
+            </nav>   
             <div class="cart-container">
                 <h1>Shopping bag</h1>
                 <div class="no-products-container"></div>
