--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                     </div>
                     <div class="home-featured-products">
                         <h2>Featured products</h2>
-                        <div class="featured-container"></div>
+                        <div class="featured-container">
+                            <div class="loader"></div>
+                        </div>
                     </div>
                 </div>
             </div>
