--- a/products.html
+++ b/products.html
@@ -18,6 +18,14 @@
     </header>
 
     <main>
+
+        <nav class="where-am-i-container">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="products.html" class="where-am-i-now"><i class="fas fa-chevron-right"></i>Shoes</a></li>
+            </ul>
+        </nav>
+
         <div class="product-page-container">         
             <div class="product-page-text">
                 <h1>Shoes</h1>
@@ -35,7 +43,7 @@
     </main>
 
 
-    <footer>
+    <footer> 
         <div> 
             <i class="fas fa-circle"></i>
             <h4>Sneakers on sosial media</h4>
