--- a/login.html
+++ b/login.html
@@ -20,26 +20,27 @@
         </header>
  
         
-        <main>   
+        <main>  
+            <nav class="where-am-i-container">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="login.html" class="where-am-i-now"><i class="fas fa-chevron-right"></i>Login</a></li>
+                </ul>
+            </nav> 
             <form id="form" class="login-form" action="submit.php" method="POST">
                 <h1>Login</h1>
-
                 <div class="message-container"></div>
-
                 <div class="form-content">
                     <label for="username">Username *</label>
-                    <input type="text" id="username">                 
-                    <div class="form-error" id="usernameError">Username over five characters</div>         
-                </div>
-    
+                    <div class="form-error" id="usernameError">Username over five characters</div>
+                    <input type="text" id="username">                                              
+                </div>  
                 <div class="form-content">   
                     <label for="password">Password *</label>
-                    <input type="password" id="password">           
-                    <div class="form-error" id="passwordError">Username over six characters</div>
+                    <div class="form-error" id="passwordError">Password over six characters</div>
+                    <input type="password" id="password">                          
                 </div>
-
                 <button class="btn login-add">Login</button>
-
             </form>   
         </main>
     </div>
