--- a/products-details.html
+++ b/products-details.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Sneakers | Home</title>
+    <title>Sneakers | </title>
     <meta charset="UTF-8">
     <meta name="description" content="get the best taco recipes, show the lastest recipes, all recipes and get inspiration to make good mexian food">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
