--- a/products.html
+++ b/products.html
@@ -28,8 +28,7 @@
 
         <div class="product-page-container">         
             <div class="product-page-text">
-                <h1>Shoes</h1>
-                <p>Search for your favorite shoes</p>
+                <div class="product-heading-container"></div>
                 <div class="search-container">
                     <input class="search" id="search" placeholder="Search for shoes ...">
                 </div>
