--- a/products.html
+++ b/products.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Sneakers | Home</title>
+    <title>Sneakers | Shoes</title>
     <meta charset="UTF-8">
-    <meta name="description" content="get the best taco recipes, show the lastest recipes, all recipes and get inspiration to make good mexian food">
+    <meta name="description" content="sneakers for everyone, the holde collection of shoes is listed">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@300;400&family=Righteous&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/3ca04481c9.js" crossorigin="anonymous"></script>
 </head>
@@ -42,7 +43,7 @@
     </main>
 
 
-    <footer> 
+    <footer>
         <div> 
             <i class="fas fa-circle"></i>
             <h4>Sneakers on sosial media</h4>
@@ -53,11 +54,11 @@
         <div>  
             <i class="fas fa-circle"></i>
             <h4>Contact information</h4>
-            <p>Phone: 99 99 99 99</p>
-            <p>Email: sneakers@gmail.com</p>
+            <p><a href="tel:99999999">99999999</a></p>
+            <p><a href="mailto:sneakers@gmail.com">sneakers@gmail.com</a></p>
             <i class="fas fa-circle"></i>
-        </div>
-    </footer>
+        </div>  
+</footer>
 
     <script src="js/products.js" type="module"></script>
 </body>
