--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </a>  
             <a href="about.html" class="home-about">
                 <div>
-                    <img src="images/about.jpg" alt="girl sitting on a stair, black cloths, sunglasses, looiking in the camera, white shoes">
+                    <img src="images/about.jpg" alt="from the store, a lot of sneakers, each sneaker on seperat orange shelf">
                 </div>
                 <div class="home-about-text">
                     <h2>About</h2>
