--- a/add-product.html
+++ b/add-product.html
@@ -20,8 +20,8 @@
         <main> 
             <nav class="where-am-i-container">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="change-product.html" class="where-am-i-now"><i class="fas fa-chevron-right"></i>Add product</a></li>
+                    <li><a href="index.html">Home<i class="fas fa-chevron-right"></i></a></li>
+                    <li><a href="change-product.html" class="where-am-i-now">Add product</a></li>
                 </ul>
             </nav>
             <form form action="/api/endpoint" method="POST" id="form" class="add-edit-delete-form">
