--- a/cart.html
+++ b/cart.html
@@ -20,8 +20,8 @@
         <main>      
             <nav class="where-am-i-container">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="cart.html" class="where-am-i-now"><i class="fas fa-chevron-right"></i>Shopping bag</a></li>
+                    <li><a href="index.html">Home<i class="fas fa-chevron-right"></i></a></li>
+                    <li><a href="cart.html" class="where-am-i-now">Shopping bag</a></li>
                 </ul>
             </nav>   
             <div class="cart-container">
