--- a/edit-delete-product.html
+++ b/edit-delete-product.html
@@ -20,9 +20,9 @@
         <main> 
             <nav class="where-am-i-container">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="products.html"><i class="fas fa-chevron-right"></i>Shoes</a></li>
-                    <li><a href="edit-delete-product.html" class="where-am-i-now"><i class="fas fa-chevron-right"></i>Edit or delete product</a></li>
+                    <li><a href="index.html">Home<i class="fas fa-chevron-right"></i></a></li>
+                    <li><a href="products.html">Shoes<i class="fas fa-chevron-right"></i></a></li>
+                    <li><a href="edit-delete-product.html" class="where-am-i-now">Edit or delete product</a></li>
                 </ul>
             </nav>
             <form form action="/api/endpoint" method="POST" id="form" class="edit-delete-form">
