--- a/products.html
+++ b/products.html
@@ -20,8 +20,8 @@
         <main>
             <nav class="where-am-i-container">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="products.html" class="where-am-i-now"><i class="fas fa-chevron-right"></i>Shoes</a></li>
+                    <li><a href="index.html">Home<i class="fas fa-chevron-right"></i></a></li>
+                    <li><a href="products.html" class="where-am-i-now">Shoes</a></li>
                 </ul>
             </nav>
             <div class="product-page-container">         
