--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
         <main>
             <nav class="where-am-i-container">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html" class="where-am-i-now"><i class="fas fa-chevron-right"></i>About</a></li>
+                    <li><a href="index.html">Home<i class="fas fa-chevron-right"></i></a></li>
+                    <li><a href="about.html" class="where-am-i-now">About</a></li>
                 </ul>
             </nav>
             <div class="about-container">
