--- a/login.html
+++ b/login.html
@@ -20,8 +20,8 @@
         <main>  
             <nav class="where-am-i-container">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="login.html" class="where-am-i-now"><i class="fas fa-chevron-right"></i>Login</a></li>
+                    <li><a href="index.html">Home<i class="fas fa-chevron-right"></i></a></li>
+                    <li><a href="login.html" class="where-am-i-now">Login</a></li>
                 </ul>
             </nav> 
             <form id="form" class="login-form" action="submit.php" method="POST">
