--- a/login.html
+++ b/login.html
@@ -42,20 +42,15 @@
         </main>
     </div>
     <footer>
+        <div class="footer-contact">  
+            <a href="tel:99999999">Call: 99999999</a>
+            <a href="mailto:sneakers@gmail.com">Email: sneakers@gmail.com</a>
+        </div>  
         <div> 
-            <i class="fas fa-circle"></i>
-            <h4>Sneakers on sosial media</h4>
             <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
             <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://www.snapchat.com.com" target="_blank"><i class="fab fa-snapchat-ghost"></i></a>
         </div>
-        <div>  
-            <i class="fas fa-circle"></i>
-            <h4>Contact information</h4>
-            <p><a href="tel:99999999">99999999</a></p>
-            <p><a href="mailto:sneakers@gmail.com">sneakers@gmail.com</a></p>
-            <i class="fas fa-circle"></i>
-        </div>  
     </footer>
     <script src="js/login.js" type="module"></script>
 </body>
