--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             <a href="mailto:sneakers@gmail.com">Email: sneakers@gmail.com</a>
         </div>  
         <div> 
-            <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.snapchat.com.com" target="_blank"><i class="fab fa-snapchat-ghost"></i></a>
+            <a href="https://www.facebook.com" target="_blank" aria-label="facbook"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com" target="_blank" aria-label="instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.snapchat.com.com" target="_blank" aria-label="snapchat"><i class="fab fa-snapchat-ghost"></i></a>
         </div>
     </footer>
     <script src="js/index.js" type="module"></script>
