--- a/add-product.html
+++ b/add-product.html
@@ -43,8 +43,7 @@
                     <textarea id="description" name="description"></textarea>                     
                 </div>
                 <div>
-                    <label for="file">Upload image *</label>
-                    <input type="file" class="upload-image" name="image" id="image" required>
+                    <label for="file">Upload image *<input type="file" class="upload-image" name="image" id="image" required></label>     
                 </div>
                 <div class="checkbox-container">                 
                     <input type="checkbox" name="featured" value="true" id="featured">
