--- a/products.html
+++ b/products.html
@@ -28,13 +28,15 @@
                 <div class="product-page-text">
                     <div class="product-heading-container"></div>
                     <div class="search-container">
-                        <input class="search" id="search" placeholder="Search for shoes ...">
+                        <label for="search">Search shoes</label>
+                        <input class="search" id="search" placeholder="Search shoes ...">
                     </div>
+                    <div class="no-products"></div>
                 </div>
                 <div class="product-container">
                     <div class="loader"></div>
                 </div>
-                <div class="no-products"></div>
+                
             </div>       
         </main>
     </div>
