--- a/edit-delete-product.html
+++ b/edit-delete-product.html
@@ -46,8 +46,8 @@
                 </div>
                 <div>
                     <div class="image-container"></div>
-                    <label for="file">Upload a new image, it will replace the current image</label>
-                    <input type="file" class="upload-image" name="image" id="image">
+                    <label for="file">Upload a new image, it will replace the current image<input type="file" class="upload-image" name="image" id="image"></label>
+                    
                 </div>
                 <div class="checkbox-container">                 
                     <input type="checkbox" name="featured" value="true" id="featured">
