--- a/products-details.html
+++ b/products-details.html
@@ -21,7 +21,7 @@
             <nav class="where-am-i-container">
                 <ul>
                     <li><a href="index.html">Home<i class="fas fa-chevron-right"></i></a></li>
-                    <li><a href="products.html">Shoes</a></li>
+                    <li><a href="products.html">Shoes<i class="fas fa-chevron-right"></i></a></li>
                     <li><a class="where-am-i-now" id="where-am-i-products-details"></a></li>
                 </ul>
             </nav>  
