--- a/products.html
+++ b/products.html
@@ -18,6 +18,9 @@
             <div class="menu-container"></div>
         </header>
         <main>
+            <div class="search-container">
+                <input class="search" id="search" placeholder="Search">
+            </div>
             <nav class="where-am-i-container">
                 <ul>
                     <li><a href="index.html">Home<i class="fas fa-chevron-right"></i></a></li>
@@ -27,10 +30,7 @@
             <div class="product-page-container">         
                 <div class="product-page-text">
                     <div class="product-heading-container"></div>
-                    <div class="search-container">
-                        <label for="search">Search shoes</label>
-                        <input class="search" id="search" placeholder="Search shoes ...">
-                    </div>
+
                     <div class="no-products"></div>
                 </div>
                 <div class="product-container">
