--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 <head>
     <title>Sneakers | Shoes</title>
     <meta charset="UTF-8">
-    <meta name="description" content="sneakers for everyone, the holde collection of shoes is listed">
+    <meta name="description" content="sneakers for everyone, the whole collection of shoes listed">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,8 +35,7 @@
                 </div>
                 <div class="product-container">
                     <div class="loader"></div>
-                </div>
-                
+                </div>              
             </div>       
         </main>
     </div>
