--- a/edit-delete-product.html
+++ b/edit-delete-product.html
@@ -42,7 +42,7 @@
                 <div>   
                     <label for="description">Product Description *</label>
                     <div class="form-error" id="descriptionError">Pleace fill out product description, more than 10 characters</div>
-                    <textarea id="description" name="description"></textarea>                     
+                    <textarea id="description" name="description" rows="10"></textarea>                     
                 </div>
                 <div>
                     <div class="image-container"></div>
