--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
                 <div class="message-container"></div>
                 <div class="form-content">
                     <label for="username">Username *</label>
-                    <div class="form-error" id="usernameError">Username over five characters</div>
+                    <div class="form-error" id="usernameError">Username over four characters</div>
                     <input type="text" id="username">                                              
                 </div>  
                 <div class="form-content">   
